# darv_ads

./: CMakeLists.txt  COMPLETE_SETUP.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  build.sh  main.cpp  oldCMakeLists.txt  test_autograd.cpp  test_complete_nn.cpp  test_debug_gradients.cpp  test_dual_path.cpp  test_dual_simple.cpp
core/: darv_cycle.hpp  darv_dataset.hpp  darv_evaluator.hpp  darv_executor.hpp  darv_improver.hpp  darv_optimizer.hpp  darv_tensor.hpp  darv_types.hpp
core/dual_path/: dual_cycle.hpp  knowledge_base.hpp  path_a.hpp  path_b.hpp  path_types.hpp
core/layers/: nn_advanced.hpp  nn_layers.hpp
others/v1/: Run.md  inMe.md  notes.md  object.md
projects/example_project/: CMakeLists.txt  main.cpp
